tests/0019-closure-closed-in-function.src
let f = null;

let local = "local";
let f_ = fun () {
    println (local);
}
f = f_;

f();